Fixed navbar menu items not being properly aligned

--- a/Lobe/styles.css
+++ b/Lobe/styles.css
@@ -51,6 +51,7 @@ nav button {
 }
 
 nav .header-logo {
+  position: absolute;
   text-decoration: none;
   cursor: pointer;
   user-select: none;
